--- a/bibliography.bib
+++ b/bibliography.bib
@@ -30,14 +30,23 @@
     howpublished = "\\ \url{http://www.qqi.ie/Publications/Computing%20-%20QQI%20Awards%20Standards.pdf}"
 }
 
-@misc{pythonitertools,
-    author    = "Python Standard Library Documentation",
-    title     = "10.1. itertools",
-     howpublished = "\\ \url{https://docs.python.org/3/library/itertools.html}"
+@misc{gowebapp,
+    author    = "Writing Web Applications",
+    title     = "Google Inc.",
+     howpublished = "\\ \url{https://golang.org/doc/articles/wiki/}"
 }
 
-@misc{pythoncollections,
-    author    = "Python Standard Library Documentation",
-    title     = "8.3. collections",
-     howpublished = "\\ \url{https://docs.python.org/3/library/collections.html}"
+@misc{golang,
+    author    = "Google Inc.",
+    title     = "The Go Programming Language",
+     howpublished = "\\ \url{https://golang.org/}"
 }
+
+@misc{paulgrahammistakes,
+    author    = "Paul Graham",
+    title     = "The 18 Mistakes That Kill Startups",
+     howpublished = "\\ \url{http://paulgraham.com/startupmistakes.html}"
+}
+
+
+
