--- a/content.tex
+++ b/content.tex
@@ -4,7 +4,72 @@
 
 \noindent
 The following document contains the instructions for the project for this module.
-In order to set a context for the feedback, first consider the following.
+This overall project will be worth 100\% of your mark for this module -- however it is split into three parts.
+
+
+\subsection*{Brief}
+You are required to develop a single-page web application~\cite{gowebapp} (SPA) written in the programming language Go~\cite{golang}.
+You must come up with an idea for the web application and decide on its architecture, create a plan and develop it, write documentation explaining how it works and how to use it, and do a presentation of your project at the end of term.
+GitHub must be used to manage the development of the software, including the use of GitHub Issues.
+
+
+\subsection*{Group work}
+For this project, you will work as part of a team.
+Teamwork experience is frequently requested by employers during our consultations with them.
+This is often coupled with questions about the use of collaborative software such as GitHub.
+It is also essential if you plan to create your own startup, as evidenced by Y Combinator co-founder Paul Graham's essay on mistakes startups make~\cite{paulgrahammistakes}.
+
+Teams will be selected by the lecturer at the beginning of the module.
+Effort will be made to ensure a balance of skills on each team, and to facilitate easy collaboration.
+
+\subsubsection*{Dealing with problems}
+There are a few common problems that arise in team work.
+The first one you may encounter is a difficulty in getting started.
+To counteract this, it is a good idea to make sure your team members have been fully introduced to each other and are aware of what they think are their strengths and weaknesses.
+
+A second common problem is a member of the team not contributing.
+Before jumping to conclusions, members of the team should identify if the issue is related to ineffective communication.
+Some members of the team will naturally be less talkative than others, and this may not reflect their effort.
+Silent contributors can be a valuable asset.
+Likewise, some members of the team will naturally be more forthright.
+It is important that all members of the team feel that they have opportunities to be heard.
+
+However, if some team members are consistently absent, non-responsive and are having a negative effect on the project, teams can, in consultation with the lecturer, decide to fork the project.
+This is fairly common in open-source projects and examples abound on GitHub.
+
+
+\subsection*{Technologies}
+You can use any combination of the following technologies in your project.
+Any other technologies, including libraries and frameworks, you wish to use must be agreed to by the lecturer.
+
+\begin{description}
+\item[Languages ---] Go, HTML, JavaScript, CSS, Typescript, Less, Sass
+\item[Libraries ---] Anulgar.js, jQuery, React, Bootstrap, Skeleton, Ember.js.
+\item[Frameworks ---] Beego, Martini, Gorilla, GoCraft, Revel, Web.go.
+\item[Databases ---] Any SQL RDBMS, CouchDB, MongoDB, Neo4j, Redis.
+\end{description}
+
+\subsection*{Submissions}
+Your team's GitHub repository, along with the Issues tracker and all other GitHub facilities, will form the main submission of the project.
+
+\subsubsection*{On-going development}
+Your team's GitHub repository will be reviewed on a weekly basis in labs.
+Teams will have the opportunity in labs to work together on the project and to ask the lecturer for advice.
+The lecturer will add issues and comments to the team's repository to record these interactions.
+It is likely that these interactions will heavily affect the marking of the project.
+
+
+\subsubsection*{Presentation}
+You must present your project at the end of the semester.
+The exact dates of presentations will be determined at a later date, in consultation with the class.
+
+One team member can do the whole presentation, but everyone must be present to answer questions.
+Presentations will be limited to 10 minutes.
+
+
+
+\subsection*{The standard}
+In order to set a context for the project, students consider the following.
 
 You should be aware that the standard required for submissions at level 8 (fourth year) is higher than at level 7 (third year), which in turn is higher than at level 6 (first and second year).
 Significant effort is made to ensure that the standard is fair and consistent across third level institutes, both nationally and internationally.
@@ -15,11 +80,10 @@ Below is a particularly relevant selection of the learning outcomes contained in
 \emph{
 The learner will be able to:
 \begin{itemize}
-\item describe the limitations of some current computing theories and knowledge.
-\item locate and evaluate information through online research.
+\item describe the limitations of some current computing theories.
+\item evaluate information through online research.
 \item model and design complex computer-based systems in a way that demonstrates comprehension of the trade-off involved in design choices.
 \item demonstrate mastery of a complex and specialised area of skills and tools;
-\item use and modify advanced skills and tools to conduct closely guided research, professional or advanced technical activity.
 \item manage one’s own learning and development, including time management and organisational skills.
 \item manage a computer-based project throughout all stages of the lifecycle.
 \item apply quality concepts to products and processes of own work.
@@ -33,7 +97,6 @@ The learner will be able to:
 \item integrate concepts learned across a variety of subject areas.
 \item identify relevant material on a given topic from available information sources.
 \item succinctly present rational and reasoned arguments to a range of audiences.
-\item test and confirm the extent to which a computerbased system meets the criteria defined for its current use.
 \item develop innovative solutions to pragmatic situations.
 \item recognise the suitability of a given solution to a problem.
 \item apply knowledge learned in new situations.
@@ -43,8 +106,7 @@ The learner will be able to:
 \emph{
 The learner will be able to:
 \begin{itemize}
-\item describe best practices in computing.
-\item recognise and apply common best practices.
+\item describe, recognise and apply best practices in computing.
 \item apply knowledge in a practical setting under supervision.
 \item demonstrate the capacity to learn new knowledge and skills.
 \item use troubleshooting strategies and techniques in correcting a variety of computer hardware and software problems.
@@ -54,13 +116,6 @@ The learner will be able to:
 
 
 
-\section*{Project brief}
-You are required to develop a single-page (web) application (SPA) written in the programming language Go.
-
-\begin{minted}{go}
-Hello, world!
-\end{minted}
-Note that \mintinline{go}{Hello} is just...~\cite{pythoncollections}.
 
 \section*{Summary}
 Best of luck.
