--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,52 +1,53 @@
-@article{einstein,
-    author =       "Albert Einstein",
-    title =        "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-        [{On} the electrodynamics of moving bodies]",
-    journal =      "Annalen der Physik",
-    volume =       "322",
-    number =       "10",
-    pages =        "891--921",
-    year =         "1905",
-    DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
-}
- 
-@book{latexcompanion,
-    author    = "Michel Goossens and Frank Mittelbach and Alexander Samarin",
-    title     = "The \LaTeX\ Companion",
-    year      = "1993",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts"
-}
- 
-@misc{knuthwebsite,
-    author    = "Donald Knuth",
-    title     = "Knuth: Computers and Typesetting",
-    url       = "http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html"
+@misc{teamworkproblems,
+  author = "The University of Queensland Student Services",
+  title = "Problems associated with group work",
+  url = "http://www.uq.edu.au/student-services/learning/problems-associated-group-work"
 }
 
 @misc{qqicomputing,
-    author    = "Quality and Qualifications Ireland",
-    title     = "Award Standards -- Computing",
-    howpublished = "\\ \url{http://www.qqi.ie/Publications/Computing%20-%20QQI%20Awards%20Standards.pdf}"
+  author = "Quality and Qualifications Ireland",
+  title = "Award Standards -- Computing",
+  howpublished = "\\ \url{http://www.qqi.ie/Publications/Computing%20-%20QQI%20Awards%20Standards.pdf}"
 }
 
 @misc{gowebapp,
-    author    = "Writing Web Applications",
-    title     = "Google Inc.",
-     howpublished = "\\ \url{https://golang.org/doc/articles/wiki/}"
+  author = "Writing Web Applications",
+  title = "Google Inc.",
+  howpublished = "\\ \url{https://golang.org/doc/articles/wiki/}"
 }
 
 @misc{golang,
-    author    = "Google Inc.",
-    title     = "The Go Programming Language",
-     howpublished = "\\ \url{https://golang.org/}"
+  author = "Google Inc.",
+  title = "The Go Programming Language",
+  howpublished = "\\ \url{https://golang.org/}"
 }
 
 @misc{paulgrahammistakes,
-    author    = "Paul Graham",
-    title     = "The 18 Mistakes That Kill Startups",
-     howpublished = "\\ \url{http://paulgraham.com/startupmistakes.html}"
+  author = "Paul Graham",
+  title = "The 18 Mistakes That Kill Startups",
+  howpublished = "\\ \url{http://paulgraham.com/startupmistakes.html}"
 }
 
+@misc{githubforking,
+  author = "GitHub",
+  title = "Fork A Repo",
+  howpublished = "\\ \url{https://help.github.com/articles/fork-a-repo/}"
+}
 
+@misc{githubissues,
+  author = "GitHub",
+  title = "Mastering Issues",
+  howpublished = "\\ \url{https://guides.github.com/features/issues/}"
+}
 
+@misc{gmitconduct,
+  author = "GMIT",
+  title = "Code of Student Conduct",
+  howpublished = "\\ \url{http://www.gmit.ie/sites/default/files/public/about/docs/code-student-conduct-2016-17.pdf}"
+}
+
+@misc{gmitplagiarism,
+  author = "GMIT",
+  title = "Policy on Plagiarism",
+  howpublished = "\\ \url{http://www.gmit.ie/sites/default/files/public/general/docs/10-no2-plagiariam-3.5.pdf}"
+}
