--- a/project.tex
+++ b/project.tex
@@ -1,4 +1,9 @@
-\documentclass[12pt]{article}
+\documentclass[12pt, a4paper]{article}
+
+\newcommand{\modulename}{Emerging Technologies}
+\newcommand{\projectyear}{2016}
+\newcommand{\projectname}{Project \projectyear}
+\date{}
 
 \usepackage{xcolor}
 \usepackage{minted}
@@ -15,27 +20,51 @@
 \usepackage{amsmath}
 \usepackage{url}
 \usepackage{fancyhdr}
- 
+\usepackage{lastpage}
+\usepackage{abstract}
+
+% Abstract
+\renewcommand{\abstractname}{}
+\renewcommand{\absnamepos}{empty}
+
+% Header and footer
+\fancypagestyle{plain}{
+  \renewcommand{\headrulewidth}{0pt}
+  \lhead{}
+  \rhead{}
+  \cfoot{Page~\thepage~of~\pageref{LastPage}}
+  \renewcommand{\footrulewidth}{0.1pt}
+}
+
 \pagestyle{fancy}
 \fancyhf{}
-\lfoot{Emerging Technologies}
-\rfoot{Project 2016}
-
-\renewcommand{\headrulewidth}{0pt}
+\lhead{\modulename}
+\rhead{\projectname}
+\cfoot{Page~\thepage~of~\pageref{LastPage}}
+\renewcommand{\headrulewidth}{0.1pt}
 \renewcommand{\footrulewidth}{0.1pt}
-  
-\usepackage[hidelinks]{hyperref}
-\usetikzlibrary{mindmap,shadows, shapes, arrows, positioning}
 
+% Links
+\usepackage[hidelinks]{hyperref}
+
+% Drawing
+\usetikzlibrary{mindmap,shadows, shapes, arrows, positioning}
 \tikzstyle{rect} = [rectangle, fill=ProcessBlue, text width=4.5em, text centered, minimum height=4em, rounded corners]
 \tikzstyle{line} = [draw, ->, very thick]
 \tikzstyle{oval} = [ellipse, fill=SeaGreen, text width=5em, text centered]
 
+% Tables
 \newcolumntype{x}[1]{>{\centering\arraybackslash\hspace{0pt}}p{#1}}
 
+% Bibliography
 \renewcommand{\refname}{\selectfont\normalsize References} 
 
+\title{\projectname}
+\author{\modulename}
+\date{}
+
 \begin{document}
+\maketitle
 \input{content.tex}
 \bibliographystyle{plain}
 \bibliography{bibliography}
