--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,8 +11,8 @@
 }
 
 @misc{gowebapp,
-  author = "Writing Web Applications",
-  title = "Google Inc.",
+  author = "Google Inc.",
+  title = "Writing Web Applications",
   howpublished = "\\ \url{https://golang.org/doc/articles/wiki/}"
 }
 
