--- a/content.tex
+++ b/content.tex
@@ -45,6 +45,7 @@ GitHub facilitates this process, as it is fairly common in open-source projects 
 
 \section*{Technology}
 You can use any combination of the following technologies in your project.
+However, Go must be the predominant language used, especially for the API.
 Any other technologies, including libraries and frameworks, you wish to use must be agreed to by the lecturer.
 
 \begin{description}
@@ -56,10 +57,8 @@ Any other technologies, including libraries and frameworks, you wish to use must
 
 \section*{Submission}
 Your team's GitHub repository, along with the Issues tracker and all other GitHub facilities, will form the main submission of the project.
-
 You must also present your project at the end of the semester.
 The exact dates of presentations will be determined at a later date, in consultation with the class.
-
 One team member can do the whole presentation, but everyone must be present to answer questions.
 Presentations will be limited to 10 minutes.
 
@@ -83,7 +82,7 @@ Student should note, however, that in certain circumstances the examiners overal
 \toprule
 40\% & Programming & Well-written code; logical directory structure; extensive commenting; extensive git commits.\\
 \midrule
-40\% & Architecture & Good separation of concerns; clear APPI, use of new technologies. \\
+40\% & Architecture & Good separation of concerns; clear API, use of new technologies. \\
 \midrule
 20\% & Presentation & Well-prepared; interesting parts of project highlighted; confident. \\
 \bottomrule
