--- a/project.tex
+++ b/project.tex
@@ -3,7 +3,7 @@
 \newcommand{\modulename}{Emerging Technologies}
 \newcommand{\projectyear}{2016}
 \newcommand{\projectname}{Project \projectyear}
-\date{}
+\newcommand{\duedate}{01/12/2016}
 
 \usepackage{xcolor}
 \usepackage{minted}
@@ -61,7 +61,7 @@
 
 \title{\projectname}
 \author{\modulename}
-\date{}
+\date{Due: \duedate}
 
 \begin{document}
 \maketitle
