--- a/content.tex
+++ b/content.tex
@@ -6,13 +6,12 @@ However, it is split into three parts: a programming component worth 40\%, an ar
 The project will involve teamwork and will be managed through the use of GitHub.
 
 You are required to develop a single-page web application (SPA)~\cite{gowebapp} written in the programming language Go~\cite{golang}.
-You must devise an idea for a web application, decide on an architecture, create a development plan, write the software, write documentation explaining how the application works, write a short user guide for it.
+You must devise an idea for a web application, decide on an architecture, create a development plan, write the software, write documentation explaining how the application works, and write a short user guide for it.
 You will also have to give a presentation of your project at the end of term.
 
 \section*{Teamwork}
 For this project, you will work as part of a team.
 Teams will be selected by the lecturer at the beginning of the module.
-Students cannot request specific team members.
 Effort will be made to ensure a balance of skills on each team.
 
 Teamwork experience is frequently requested by employers.
@@ -34,14 +33,15 @@ One you may encounter is a difficulty in getting started.
 To counteract this, ensure your team members have been properly introduced to each other, and everyone has explained how they think that they can best contribute to the project.
 
 Another common problem is a member of the team not contributing.
-Before coming to this conclusion, members of the team should ensure that the issue is not just ineffective communication.
+Before coming to this conclusion, members of the team should ensure that the issue is not justa symptom of ineffective communication.
 Some members of the team will naturally be less talkative than others, and this may not reflect their work effort.
 Likewise, some members of the team will naturally be more forthright.
 It is important that all members of the team feel that they have opportunities to be heard.
 
-However, should some team members be consistently absent, non-responsive and are having a negative effect on the project, teams can, in consultation with the lecturer, decide to fork the project.
-This means that from that point forward, part of the team will separate into a separate project.
-GitHub facilitates this process, as it is fairly common in open-source projects and examples abound on GitHub~\cite{githubforking}.
+However, should a team decide to, they may dissolve their team, fork the project, and pursue the forked projects individually and/or in smaller groups.
+This might also be appropriate if some team members be consistently absent, non-responsive and are having a negative effect on the project.
+This means that from that point forward, part of the team will work on a separate codebase.
+GitHub facilitates this process, as it is fairly common in open-source projects, with examples abound on GitHub~\cite{githubforking}.
 
 \section*{Technology}
 You can use any combination of the following technologies in your project.
@@ -51,7 +51,7 @@ Any other technologies, including libraries and frameworks, you wish to use must
 \begin{description}
 \item[Languages ---] Go, HTML, JavaScript, CSS, Typescript, Less, Sass
 \item[Libraries ---] Anulgar.js, jQuery, React, Bootstrap, Skeleton, Ember.js.
-\item[Frameworks ---] Beego, Martini, Gorilla, GoCraft, Revel, Web.go.
+\item[Frameworks ---] Macroon, Beego, Martini, Gorilla, GoCraft, Revel, Web.go.
 \item[Databases ---] Any SQL RDBMS, CouchDB, MongoDB, Neo4j, Redis.
 \end{description}
 
@@ -64,8 +64,10 @@ Presentations will be limited to 10 minutes.
 
 \subsection*{Quality}
 A good project submission will demonstrate a team that worked well together to create a useful and easy-to-use web application.
-The code base will be well thought-out, and the issue tracker will show that the project was well managed.
-Programming is only part of the task.
+The code base will be well thought-out and contain extensive comments.
+Their will be useful help documents and README files.
+The issue tracker will show that the project was well managed.
+Remember that programming is only part of the task.
 
 \subsection*{Student Conduct}
 You should familiarise yourself with GMIT's code of student conduct~\cite{gmitconduct} and also the policy on plagiarism~\cite{gmitplagiarism}.
