--- a/content.tex
+++ b/content.tex
@@ -51,7 +51,7 @@ Any other technologies, including libraries and frameworks, you wish to use must
 \begin{description}
 \item[Languages ---] Go, HTML, JavaScript, CSS, Typescript, Less, Sass
 \item[Libraries ---] Anulgar.js, jQuery, React, Bootstrap, Skeleton, Ember.js.
-\item[Frameworks ---] Macroon, Beego, Martini, Gorilla, GoCraft, Revel, Web.go.
+\item[Frameworks ---] Macaroon, Beego, Martini, Gorilla, GoCraft, Revel, Web.go.
 \item[Databases ---] Any SQL RDBMS, CouchDB, MongoDB, Neo4j, Redis.
 \end{description}
 
