--- a/content.tex
+++ b/content.tex
@@ -3,9 +3,9 @@
 The following document contains the instructions for \projectname{} for \modulename{}.
 The project will be worth 100\% of your mark for this module.
 However, it is split into three parts: a programming component worth 40\%, an architecture component, also worth 40\%, and finally a presentation component worth 20\%.
-The project will involve teamwork and will be managed through the use of GitHub.
+The project will involve teamwork and will be managed using GitHub.
 
-You are required to develop a single-page web application (SPA)~\cite{gowebapp} written in the programming language Go~\cite{golang}.
+You are required to develop a single-page web application(SPA)~\cite{gowebapp} written in the programming language Go~\cite{golang}.
 You must devise an idea for a web application, decide on an architecture, create a development plan, write the software, write documentation explaining how the application works, and write a short user guide for it.
 You will also have to give a presentation of your project at the end of term.
 
@@ -33,7 +33,7 @@ One you may encounter is a difficulty in getting started.
 To counteract this, ensure your team members have been properly introduced to each other, and everyone has explained how they think that they can best contribute to the project.
 
 Another common problem is a member of the team not contributing.
-Before coming to this conclusion, members of the team should ensure that the issue is not justa symptom of ineffective communication.
+Before coming to this conclusion, members of the team should ensure that the issue is not just a symptom of ineffective communication.
 Some members of the team will naturally be less talkative than others, and this may not reflect their work effort.
 Likewise, some members of the team will naturally be more forthright.
 It is important that all members of the team feel that they have opportunities to be heard.
@@ -41,7 +41,7 @@ It is important that all members of the team feel that they have opportunities t
 However, should a team decide to, they may dissolve their team, fork the project, and pursue the forked projects individually and/or in smaller groups.
 This might also be appropriate if some team members be consistently absent, non-responsive and are having a negative effect on the project.
 This means that from that point forward, part of the team will work on a separate codebase.
-GitHub facilitates this process, as it is fairly common in open-source projects, with examples abound on GitHub~\cite{githubforking}.
+GitHub facilitates this process, as it is common in open-source projects, with examples abound on GitHub~\cite{githubforking}.
 
 \section*{Technology}
 You can use any combination of the following technologies in your project.
@@ -70,7 +70,7 @@ The issue tracker will show that the project was well managed.
 Remember that programming is only part of the task.
 
 \subsection*{Student Conduct}
-You should familiarise yourself with GMIT's code of student conduct~\cite{gmitconduct} and also the policy on plagiarism~\cite{gmitplagiarism}.
+You should familiarise yourself with GMIT's code of student conduct~\cite{gmitconduct} and the policy on plagiarism~\cite{gmitplagiarism}.
 In particular, note two things.
 First, students are expected to treat other students and staff politely and with courtesy.
 Second, it is assumed that all work you submit is being presented as your own work, unless referenced otherwise.
